@@ -12,7 +12,7 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '0.0.5'
+version = '0.0.6'
 group = 'net.Nephty.rgbee' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'rgbee'
 
