@@ -4,5 +4,6 @@
   "item.rgbee.liquid_pollen": "Liquid Pollen",
   "item.rgbee.liquid_pollen_bottle": "Liquid Pollen Bottle",
   "block.rgbee.enchanted_flower": "Enchanted Flower",
-  "item.rgbee.pollen_harvester": "Pollen Harvester"
+  "item.rgbee.pollen_harvester": "Pollen Harvester",
+  "item.rgbee.golden_pollen": "Golden Pollen"
 }
