@@ -4,5 +4,6 @@
   "item.rgbee.liquid_pollen": "Pollen liquide",
   "item.rgbee.liquid_pollen_bottle": "Fiole de pollen liquide",
   "block.rgbee.enchanted_flower": "Fleur enchantée",
-  "item.rgbee.pollen_harvester": "Récolteur de pollen"
+  "item.rgbee.pollen_harvester": "Récolteur de pollen",
+  "item.rgbee.golden_pollen": "Pollen doré"
 }
