@@ -7,7 +7,7 @@
   ],
   "key": {
     "#": {
-      "item": "minecraft:oak_slab"
+      "item": "minecraft:wooden_slabs"
     },
     "i": {
       "item": "minecraft:iron_ingot"
