@@ -1,0 +1,28 @@
+{
+  "type": "minecraft:flower",
+  "config": {
+    "can_replace": false,
+    "project": true,
+    "need_water": false,
+    "xspread": 7,
+    "yspread": 3,
+    "zspread": 7,
+    "tries": 64,
+    "state_provider": {
+      "type": "minecraft:forest_flower_provider",
+      "entries": [
+        {
+          "weight": 3,
+          "data": {
+            "Name": "rgbee:enchanted_flower"
+          }
+        }
+      ]
+    },
+    "block_placer": {
+      "type": "minecraft:simple_block_placer"
+    },
+    "whitelist": ["minecraft:grass"],
+    "blacklist": []
+  }
+}
