@@ -3,3 +3,4 @@ Build: 1.16.5-0.0.2 - Tue Jun 08 21:53:08 GMT 2021 Nephty : Added pollen harvest
 Build : 1.16.5-0.0.3 - Tue Jun 11 08:39:37 GMT 2021 Nephty : The flower rendering is now working as intended.
 Build : 1.16.5-0.0.4 - Tue Jun 11 16:31:39 GMT 2021 Nephty : The pollen harvester now fully works as intended. Shift + right click to extract the pollen stored in the harvester. Shift + left click with an empty harvester to move the pollen from your inventory to the harvester. The maximum capacity of the harvester is 128.
 Build : 1.16.5 0.0.5 - Mon Jun 14 15:10:09 GMT 2021 Nephty : Enchanted flowers now generate the same way poppies do. Patches of enchanted flowers can be found in plains, forests and such.
+Build : 1.16.5 0.0.6 - Mon Jun 14 17:24:46 GMT 2021 Nephty : Enchanted flowers now have a random chance of breaking upon harvesting pollen. The random chance distribution is not uniform, and the maximum number of harvests before breaking the flower is 10. Also, the random chance is not unique to each flower. This means that harvesting multiple flowers once will be the same as harvesting the same flower multiple times, in terms of breaking probabilities. The harvester now has a durability of 220 and using the right click to move pollen into the harvester or out from it has a 1 in 4 chance of damaging the item. Right clicking a flower to harvest pollen will always damage the item. Modified the texture of the pollen to make it more brown-ish. Added golden pollen, which can be crafted with 8 pollen and 1 gold ingot.
